# obs-virtualbg

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  README_ja.md
.github/: dependabot.yml  pr-labeler.yml  release-drafter.yml
.github/workflows/: build.yml  pr-labeler.yml  release-drafter.yml  upload-release.yml
cmake/: FindLibObs.cmake  FindOnnxRuntime.cmake
convert-model/pp_humanseg/: README.md  download_and_convert.sh  replace.json
data/: model.onnx  pp_humanseg.onnx  virtualbg-mask.effect  virtualbg.effect
data/locale/: en-US.ini  ja-JP.ini
model/: README.md
scripts/: build_linux.sh  build_mac.sh  build_obs.bat  build_onnxruntime_mac.sh  build_opencv.bat  build_win.bat  install_deps_linux.sh  install_deps_mac.sh  install_pkgs_linux.sh  package_linux.sh
src/: CMakeLists.txt  blur_gen.cpp  jbf_gen.cpp  jbf_run.cpp  obs-virtualbg-detector.cpp  obs-virtualbg-render.cpp  obs-virtualbg.cpp  plugin.cpp  plugin.hpp
